# cmake_demo

./: README.md
call_share/: CMakeLists.txt
call_static/: CMakeLists.txt
call_third_party_library/: CMakeLists.txt  main.cpp
generate_share/: CMakeLists.txt  main.cpp
generate_static/: CMakeLists.txt
generate_static/src/: Print.cpp
tgl/: print_03  print_04
